--- a/styles/Nav/nav.module.scss
+++ b/styles/Nav/nav.module.scss
@@ -32,7 +32,23 @@
         }
     }
 }
-
+.loginModal{
+    div{
+        input{
+            width: 300px !important;
+        }
+    }
+    span{
+        margin-top: 10px;
+    }
+    .loginButton{
+        button{
+            margin-top: 20px;
+        }
+        @include flex(column,center,center);
+        width: 100%;
+    }
+}
 .active{
     border-bottom: 1px solid #fff;
     font-weight: 600;
