--- a/styles/login/login.module.scss
+++ b/styles/login/login.module.scss
@@ -20,6 +20,11 @@
             .loginRightDiv{
                 width: 400px;
             }
+
+            .userImageDiv > img{
+                border-radius: 50%;
+                border: 2px solid red;
+            }
             .languageSelection{
                 select{
                     outline: none;
@@ -32,6 +37,7 @@
                 text-align: center;
                 letter-spacing: 0.5px;
             }
+            
             .inputsDiv{
                 @include flex(column,center,center);
                 input{
@@ -57,6 +63,14 @@
                     a{
                         color: blue;
                     }
+                }
+                .errorMessageDiv{
+                    width: 100%;
+                    margin-top: 5px;
+                    @include flex(row,center,center);
+                    color: red;
+                    letter-spacing: 0.5px;
+                    font-weight: 600;
                 }
                 button{
                     margin-top: 30px;
